# Sponzey-Cabinet

./: .gitignore  AGENTS.md  Cargo.toml  MD-RESEARCH.md  MVP_RELEASE.md  PROJECT.md  README.md  RESEARCH.md  ROADMAP.md  TECHNICAL_DECISIONS.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: bounded_child_process.rs  lib.rs  main.rs
apps/desktop/src-tauri/tests/: asset_drop_transport_contract_tests.rs  asset_import_operation_runtime_tests.rs  asset_import_selection_runtime_tests.rs  asset_phase012_gate_tests.rs  (+28 more)
crates/cabinet-adapters/: Cargo.toml
crates/cabinet-adapters/src/: composite_graph_projection.rs  deterministic_embedding_provider.rs  durable_asset_association_catalog.rs  durable_asset_import_operation_repository.rs  durable_asset_metadata_catalog.rs  durable_backup_package_store.rs  durable_canvas_graph_projection.rs  durable_canvas_repository.rs  durable_document_link_catalog.rs  durable_last_canvas_selection.rs  durable_local_graph_projection.rs  durable_local_link_index.rs  durable_local_search_index.rs  durable_projection_repair_repository.rs  durable_projection_work_repository.rs  fake_ai_provider.rs  fake_connector_gateway.rs  fake_s3_object_storage.rs  fake_webhook_transport.rs  guarded_document_revision_commit.rs  lib.rs  local_ai_answer_store.rs  local_asset_availability_resolver.rs  local_asset_external_opener.rs  local_asset_import_source.rs  local_asset_preview_reader.rs  local_asset_search_index.rs  local_asset_staging_writer.rs  local_asset_store.rs  local_atomic_file.rs  local_audit_log_store.rs  local_auth.rs  local_backup_restore_store.rs  local_backup_store.rs  local_canvas_repository.rs  local_comment_repository.rs  local_connector_activity_store.rs  local_content_addressed_asset_publisher.rs  local_create_document_revision_runtime.rs  local_current_document_attachment_projection.rs  (+45 more)
crates/cabinet-adapters/tests/: composite_graph_projection_tests.rs  deterministic_embedding_provider_tests.rs  durable_asset_association_catalog_tests.rs  durable_asset_import_operation_repository_tests.rs  durable_asset_metadata_catalog_tests.rs  durable_backup_package_store_tests.rs  durable_canvas_graph_projection_tests.rs  durable_canvas_repository_tests.rs  durable_document_link_catalog_tests.rs  durable_global_graph_listing_tests.rs  durable_local_graph_projection_tests.rs  durable_local_link_index_tests.rs  durable_local_search_index_tests.rs  durable_projection_repair_repository_tests.rs  durable_projection_work_repository_tests.rs  fake_ai_provider_tests.rs  fake_connector_gateway_tests.rs  fake_webhook_transport_tests.rs  guarded_document_revision_commit_tests.rs  local_asset_availability_resolver_tests.rs  local_asset_external_opener_tests.rs  local_asset_import_source_tests.rs  local_asset_preview_reader_tests.rs  local_asset_search_index_tests.rs  local_asset_staging_writer_tests.rs  local_asset_store_tests.rs  local_atomic_file_tests.rs  local_audit_log_store_tests.rs  local_auth_adapter_tests.rs  local_backup_restore_store_tests.rs  local_backup_store_tests.rs  local_canvas_repository_tests.rs  local_comment_repository_tests.rs  local_committed_version_record_reader_tests.rs  local_content_addressed_asset_publisher_tests.rs  local_create_document_revision_runtime_tests.rs  local_current_document_attachment_projection_tests.rs  local_current_document_projection_catalog_tests.rs  local_current_document_revision_projection_tests.rs  local_current_document_version_pointer_tests.rs  (+42 more)
crates/cabinet-core/: Cargo.toml
crates/cabinet-core/src/: config.rs  first_run.rs  lib.rs  logging.rs  migration.rs  performance.rs  server_config.rs
crates/cabinet-core/tests/: config_tests.rs  first_run_initializer_tests.rs  first_run_tests.rs  local_desktop_config_tests.rs  logging_tests.rs  migration_tests.rs  performance_tests.rs  server_config_tests.rs
crates/cabinet-platform/: Cargo.toml
crates/cabinet-platform/src/: asset_search_command.rs  document_authoring_command.rs  document_navigator_command.rs  lib.rs  local_desktop_runtime.rs  release_smoke.rs  workspace_home_command.rs
crates/cabinet-platform/tests/: asset_search_command_executor_tests.rs  clean_install_smoke.rs  data_preservation_smoke.rs  document_authoring_command_executor_tests.rs  document_navigator_command_executor_tests.rs  local_desktop_bootstrap_state_tests.rs  local_desktop_command_runtime_tests.rs  local_durable_authoring_flow_tests.rs  mvp_end_to_end_smoke.rs  phase002_migration_fixture_smoke.rs  query_performance_benchmarks.rs  startup_repair_smoke.rs  workspace_home_command_executor_tests.rs
crates/cabinet-server/: Cargo.toml
crates/cabinet-server/src/: adapter.rs  auth.rs  bootstrap.rs  collaboration_realtime.rs  composition.rs  e2e_http.rs  errors.rs  health.rs  lib.rs  package_smoke.rs  runtime.rs
crates/cabinet-server/tests/: auth_middleware_tests.rs  canvas_runtime_tests.rs  collaboration_realtime_command_mapper_tests.rs  collaboration_realtime_executor_tests.rs  collaboration_realtime_runtime_target_tests.rs  server_bootstrap_tests.rs  server_boundary_tests.rs  server_dependency_manifest_tests.rs  server_health_handler_tests.rs  server_package_smoke_tests.rs  server_runtime_wiring_tests.rs  split_realtime_server_target_tests.rs
(+1267 files in other folders)
