[workspace]
members = [
  "crates/cabinet-domain",
  "crates/cabinet-ports",
  "crates/cabinet-usecases",
  "crates/cabinet-core",
  "crates/cabinet-adapters",
  "crates/cabinet-platform",
  "apps/desktop/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.94"
