[package]
name = "cabinet-adapters"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
cabinet-core = { path = "../cabinet-core" }
cabinet-domain = { path = "../cabinet-domain" }
cabinet-ports = { path = "../cabinet-ports" }
cabinet-usecases = { path = "../cabinet-usecases" }
pulldown-cmark = { version = "=0.13.4", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
