[package]
name = "cabinet-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
cabinet-core = { path = "../cabinet-core" }
cabinet-domain = { path = "../cabinet-domain" }
cabinet-ports = { path = "../cabinet-ports" }
cabinet-usecases = { path = "../cabinet-usecases" }

[[bin]]
name = "cabinet-server"
path = "src/bin/cabinet_server.rs"
