[package]
name = "cabinet-desktop-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
cabinet-adapters = { path = "../../../crates/cabinet-adapters" }
cabinet-domain = { path = "../../../crates/cabinet-domain" }
cabinet-platform = { path = "../../../crates/cabinet-platform" }
cabinet-ports = { path = "../../../crates/cabinet-ports" }
cabinet-usecases = { path = "../../../crates/cabinet-usecases" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"

[dev-dependencies]
cabinet-core = { path = "../../../crates/cabinet-core" }
cabinet-domain = { path = "../../../crates/cabinet-domain" }
cabinet-ports = { path = "../../../crates/cabinet-ports" }
